<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SubmitActivity">

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="474dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="101dp">

        <EditText
            android:id="@+id/employerName"
            android:layout_width="222dp"
            android:layout_height="70dp"
            android:width="200dp"
            android:autofillHints="username"
            android:hint="Name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/location1"
            android:layout_width="183dp"
            android:layout_height="48dp"
            android:text="" />

        <Button
            android:id="@+id/getLocation1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="Get Location"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/payRate"
            android:layout_width="222dp"
            android:layout_height="70dp"
            android:width="200dp"
            android:autofillHints="pay rate Per Hour"
            android:hint="Pay Rate Per Hour"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <Spinner
            android:id="@+id/jobType"
            android:layout_width="222dp"
            android:layout_height="70dp"
            android:hint="Job Type"
            android:spinnerMode="dropdown"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:text="Submit"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/errorLabel"
            android:layout_width="141dp"
            android:layout_height="65dp"
            android:text=""
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="204dp"
            android:layout_height="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>